Corrigido erro de imagem que não abria

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
     text-align: center;
-    background-color:beige;
+    background-image: url("https://speedfiber.ddns.net/cancelamentos/assets/logo2.jpg");
+    background-position:center;
+    color: aliceblue;
 }
